WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272665
REGRESSION(
271848@main
): "Watch later" checkbox on youtube.com mis-renders
https://bugs.webkit.org/show_bug.cgi?id=272665
Summary
REGRESSION(271848@main): "Watch later" checkbox on youtube.com mis-renders
Antti Koivisto
Reported
2024-04-15 04:56:20 PDT
1. Sign into youtube.com 2. Load
https://www.youtube.com/watch?v=MO-qehjc04s&t=2974s
3. Click the Save button below the video 4. Click the Watch later button
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2024-04-15 04:56:38 PDT
rdar://125644808
Antti Koivisto
Comment 2
2024-04-15 05:11:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27253
EWS
Comment 3
2024-04-15 07:44:15 PDT
Committed
277501@main
(21426dee35a1): <
https://commits.webkit.org/277501@main
> Reviewed commits have been landed. Closing PR #27253 and removing active labels.
Antti Koivisto
Comment 4
2024-04-17 01:16:18 PDT
***
Bug 271093
has been marked as a duplicate of this bug. ***
alan
Comment 5
2024-05-11 08:43:00 PDT
***
Bug 274033
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug