REGRESSION(271848@main): "Watch later" checkbox on youtube.com mis-renders https://bugs.webkit.org/show_bug.cgi?id=272665 rdar://125644808

Reviewed by Alan Baradlay.

Percent height out-of-flow positioned boxes taking the fast path may end up with miscomputed height.

* LayoutTests/fast/block/positioning/simple-out-of-flow-percent-height-expected.html: Added.
* LayoutTests/fast/block/positioning/simple-out-of-flow-percent-height.html: Added.
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutModernLines):

Disable the out-of-flow fast path if there are percent height boxes. The problem is that the fast path
does a synchronous layout for these boxes before the height of the parent is computed.

The synchronous layout itself is a workaround but fixing it may be more complicated.

Canonical link: https://commits.webkit.org/277501@main